# mockup

./: CMakeLists.txt  LICENSE  README.md
include/mockup/: mockup.hpp
test/: test_mockup.cpp
